It solves the issue with the maven site generation using the jdk15