@@ -15,7 +15,8 @@
    See the License for the specific language governing permissions and
    limitations under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <name>BULL - Bean Utils Light Library</name>
     <groupId>com.hotels.beans</groupId>
@@ -46,20 +47,16 @@
     </modules>
 
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <jdk.version>15</jdk.version>
         <maven.compiler.source>${jdk.version}</maven.compiler.source>
         <maven.compiler.target>${jdk.version}</maven.compiler.target>
         <lombok.version>1.18.20</lombok.version>
         <apache.commons-lang3.version>3.12.0</apache.commons-lang3.version>
-        <hotels.oss.plugin.config.version>1.3.0</hotels.oss.plugin.config.version>
         <!-- testing dependencies -->
         <mockito-core.version>3.11.1</mockito-core.version>
         <testng.version>7.4.0</testng.version>
         <assertj-core.version>3.20.1</assertj-core.version>
         <!-- validation dependencies -->
-        <validation-api.version>2.0.1.Final</validation-api.version>
         <hibernate-validator.version>7.0.1.Final</hibernate-validator.version>
         <slf4j-api.version>1.7.30</slf4j-api.version>
         <glassfish.jakarta.el.version>4.0.1</glassfish.jakarta.el.version>
@@ -71,7 +68,8 @@
         <jacoco.branchRatio>0.89</jacoco.branchRatio>
         <jacoco.complexityRatio>0.91</jacoco.complexityRatio>
         <jacoco.lineRatio>0.98</jacoco.lineRatio>
-        <sonar.coverage.exclusions>**/AbstractTransformer.*,**/model/*,**/constant/*,**/error/*,**/annotation/*</sonar.coverage.exclusions>
+        <sonar.coverage.exclusions>**/AbstractTransformer.*,**/model/*,**/constant/*,**/error/*,**/annotation/*
+        </sonar.coverage.exclusions>
         <!-- Required for coverall jdk >= 9 compatibility -->
         <jaxb-api.version>2.3.1</jaxb-api.version>
         <!-- site properties -->
@@ -571,6 +569,7 @@
                     <configuration>
                         <siteDirectory>${project.basedir}/docs/site</siteDirectory>
                         <skipDeploy>true</skipDeploy>
+                        <!--                        <generateReports>false</generateReports>-->
                     </configuration>
                     <dependencies>
                         <dependency><!-- add support for ssh/scp -->
@@ -673,6 +672,8 @@
                 <version>${maven.javadoc-plugin.version}</version>
                 <configuration>
                     <skip>${javadoc.skip}</skip>
+                    <additionalOptions>--enable-preview</additionalOptions>
+                    <release>${jdk.version}</release>
                 </configuration>
                 <executions>
                     <execution>
@@ -719,9 +720,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>${maven.javadoc-plugin.version}</version>
                 <configuration>
                     <show>public</show>
+                    <additionalOptions>--enable-preview</additionalOptions>
+                    <release>${jdk.version}</release>
                 </configuration>
                 <reportSets>
                     <reportSet>
@@ -732,6 +734,21 @@
                     </reportSet>
                 </reportSets>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <configuration>
+                    <skip>${checkstyle.check.skip}</skip>
+                </configuration>
+                <reportSets>
+                    <reportSet>
+                        <reports>
+                            <report>checkstyle</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
+            </plugin>
         </plugins>
+
     </reporting>
 </project>
